[package]
name = "forged"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
git = "https://github.com/rust-sdl2/rust-sdl2"
version = "0.35.2"
default-features = false
features = ["image", "ttf"]

[dependencies]
rand = "0.8.4"
rand_seeder = "0.2.3"
rand_chacha = "0.3.1"
noise = "0.7"